--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,164 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.app{
+  height: 100vh;
+  display: flex;
+  background-color: #020230;
+  color: white
+
+}
+
+.main{
+  width: 75%;
+  background: linear-gradient(to bottom, rgba(0,0,0,0), #020230), url("./Assets/bg.jpg") center;
+  display: flex;
+  flex-direction: column;
+}
+
+.top{
+  height: 50%;
+  position: relative;
+}
+
+.timer{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 5px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  font-weight: 700;
+  position: absolute;
+  bottom: 10px;
+  left: 80px;
+}
+
+.bottom{
+  height: 50%;
+}
+
+.trivia{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.question{
+  width: 80%;
+  background: linear-gradient(#100241, black);
+  border: 2px solid white;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 20px;
+}
+
+.answers{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.answer{
+  width: 40%;
+  padding: 10px;
+  text-align: center;
+  background: linear-gradient(#0e0124, #22074d);
+  border: 1px solid white;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 10px 20px 10px 0;
+  cursor: pointer;
+}
+
+.answer.correct{
+  animation: correct 3s ease forwards;
+}
+
+  @keyframes correct {
+    0%, 22%, 42%{
+      background: mediumblue;
+    }
+    20%, 40%, 60%{
+      background: linear-gradient(#0e0124, #22074d);
+    }
+    62%, 100%{
+      background: green;
+    }
+    
+  }
+
+
+  .answer.wrong{
+    animation: wrong 3s ease forwards;
+  }
+  
+    @keyframes wrong {
+      0%, 22%, 42%{
+        background: mediumblue;
+      }
+      20%, 40%, 60%{
+        background: linear-gradient(#0e0124, #22074d);
+      }
+      62%, 100%{
+        background: crimson;
+      }
+      
+    }
+
+.answer:hover, .answer.active{
+  background: mediumblue;
+}
+.money{
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.moneyList{
+  list-style: none;
+  width: 100%;
+  padding: 20px;
+}
+
+.moneyListItem{
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  border-radius: 5px;
+
+}
+
+.moneyListItem.active{
+  background-color: teal;
+}
+
+.number{
+  font-size: 18px;
+  font-weight: 100;
+  width: 30%;
+}
+.amount{
+  font-size: 20px;
+  font-weight: 300;
+}
+
+
+.endText{
+  position: relative;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+
+}
