--- a/src/index.css
+++ b/src/index.css
@@ -170,5 +170,28 @@ code {
   right: 0;
   left: 0;
   margin: auto;
+}
 
+.start{
+  width: 250px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.startBtn{
+  width: 100%;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
 }
