--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,12 @@ code {
   flex-direction: column;
 }
 
+@media (max-width: 678px){
+  .main{
+    width: 100%;
+  }
+}
+
 .top{
   height: 50%;
   position: relative;
@@ -149,7 +155,25 @@ code {
 }
 
 .moneyListItem.active{
-  background-color: teal;
+  background-color: #f19923;
+}
+
+.moneyList_mobile{
+  width: 150px;
+  background-color: #f19923;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 35px;
+  border-radius: 15px;
+  color: #222;
+}
+
+.moneyList_mobile .earning{
+  font-weight: bold;
+  font-size: 17px;
+  margin-bottom: 7px;
 }
 
 .number{
@@ -170,6 +194,17 @@ code {
   right: 0;
   left: 0;
   margin: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.endText button{
+  font-size: 25px;
+  margin-right: 5px;
+  cursor: pointer;
 }
 
 .start{
